addded a paragraph to file

--- a/index.html
+++ b/index.html
@@ -5,5 +5,12 @@
     </head>
     <body>
         Divya Chelikani
-    </body>
+    
+
+
+<h6>My favourite Team Sport is : Throwball</h6>
+<p>My favorite game is <b>Throwball</b>. Throw ball is my passion. I used to play this game every day, it has <b>seven players in one team.</b>
+
+</p>
+</body>
 </html>
