added ordered list

--- a/index.html
+++ b/index.html
@@ -12,5 +12,14 @@
 <p>My favorite game is <b>Throwball</b>. Throw ball is my passion. I used to play this game every day, it has <b>seven players in one team.</b>
 
 </p>
+
+<hr>
+
+<h1>Ordered and Unordered list</h1>
+<h2> The Avengers</h2>
+<ol> Nandhu Narayan
+    Abitha
+    Prajeetha
+    </ol>
 </body>
 </html>
