modified the ordered list

--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
 
 <hr>
 
-<h1>Ordered and Unordered list</h1>
-<h2> The Avengers</h2>
-<ol> Nandhu Narayan
-    Abitha
-    Prajeetha
-    </ol>
+<h3>Ordered and Unordered list</h3>
+<h4> The Avengers</h4>
+<ol> 1.Nandhu Narayan</ol>
+<ol>2.Abitha</ol> 
+<ol>3.Prajeetha</ol>
 </body>
 </html>
