--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <ol>2.Abitha</ol> 
 <ol>3.Prajeetha</ol>
 <h4>Other teams that i think would be good to watch play</h4>
-<ul> Lucky Charms</ul>
-<ul> Seven Stunners</ul>
-<ul> Daily Defensesss</ul>
+<ul> - Lucky Charms</ul>
+<ul> - Seven Stunners</ul>
+<ul> - Daily Defensesss</ul>
 </body>
 </html>
