--- a/aboutme.html
+++ b/aboutme.html
@@ -5,5 +5,9 @@
 <p>
     My name is Divya I'm from Hyderabad. I have an experience of 2 years in Accenture solution Pvt.Ltd. When I'm free i like to spend with pets and i love gardening as well.
 </p>
+
+<h4> My Favourite Book : Rich Dad Poor Dad</h4>
+<p> Rich Dad Poor Dad is Robert's story of growing up with two dads — his real father and the father of his best friend, his rich dad — and the ways in which both men shaped his thoughts about money and investing.
+</p>
  </body>   
 </html>
