modified the code

--- a/aboutme.html
+++ b/aboutme.html
@@ -5,9 +5,15 @@
 <p>
     My name is Divya I'm from Hyderabad. I have an experience of 2 years in Accenture solution Pvt.Ltd. When I'm free i like to spend with pets and i love gardening as well.
 </p>
+about me : ![Added my photo](myphoto.jpg)
+
 
 <h4> My Favourite Book : Rich Dad Poor Dad</h4>
 <p> Rich Dad Poor Dad is Robert's story of growing up with two dads — his real father and the father of his best friend, his rich dad — and the ways in which both men shaped his thoughts about money and investing.
 </p>
+<img src=myfavouritebook.jpg height=”200” width=“100” alt=“a picture of a book” >
+
+
+
  </body>   
 </html>
