--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
 
 <h3>Ordered and Unordered list</h3>
 <h4> The Avengers</h4>
-<ol> 1.Nandhu Narayan</ol>
-<ol>2.Abitha</ol> 
-<ol>3.Prajeetha</ol>
+<ol> <li>Nandhu Narayan</li>
+<li> Abitha</li> 
+<li> Prajeetha</li> </ol>
 <h4>Other teams that i think would be good to watch play</h4>
-<ul> * Lucky Charms</ul>
-<ul> * Seven Stunners</ul>
-<ul> * Daily Defensesss</ul>
+<ul> <li>Lucky Charms</li>
+<li> Seven Stunners</li>
+<li> Daily Defensesss</li></ul>
+
+
 </body>
 </html>
