--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <li> Seven Stunners</li>
 <li> Daily Defensesss</li></ul>
 
-<a href="https://C:\Users\S556512\Documents\GitHub\44563-webapps-assignment-3-Divyachelikani/aboutme.html">Myfavouritebook</a>
+<a href="https://Users\S556512\Documents\GitHub\44563-webapps-assignment-3-Divyachelikani/aboutme.html">Myfavouritebook</a>
 
 </body>
 </html>
