--- a/index.html
+++ b/index.html
@@ -26,5 +26,22 @@
 
 <a href="C:\Users\S556512\Documents\GitHub\44563-webapps-assignment-3-Divyachelikani/aboutme.html">Myfavouritebook</a>
 
+<hr>
+<h4> Creating a Table </h4>
+<p>I would recommand the people to visit the four countries United states, Malaysia,Singapore and Dubai. These countries where we can see indians and it is affortable budget to spend with family.</p>
+<table>
+    <tr>
+        <th>Name of the country </th>
+        <th>Reason to Recommand	</th>
+        <th>Days of spending </th>
+        </tr>
+        <tr>
+            <td> United States </td>
+            <td>It is the largest country world in a area </td>
+            <td> 60 days </td>
+        </tr>
+</table>
+
+
 </body>
 </html>
