added table rows

--- a/index.html
+++ b/index.html
@@ -40,6 +40,21 @@
             <td>It is the largest country world in a area </td>
             <td> 60 days </td>
         </tr>
+        <tr>
+            <td>Malaysia </td>
+            <td> It is a multiracial country with a rich cultural heritage </td>
+            <td> 30 days </td>
+        </tr>
+        <tr> 
+            <td> Singapore </td>
+            <td> Singapore is a small, stable, highly developed country with an elected parliamentary system of government. Tourist facilities are modern and widely available	</td>
+            <td> 30 days </td>
+        </tr>
+        <tr>
+            <td> Dubai</td>
+            <td> Dubai is famous for wealth, being expensive, and being a popular luxury travel destination	</td>
+            <td> 30 days </td>
+        </tr>
 </table>
 
 
