--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
 <h4> Creating a Table </h4>
 <p>I would recommand the people to visit the four countries United states, Malaysia,Singapore and Dubai. These countries where we can see indians and it is affortable budget to spend with family.</p>
 <table>
+    <style>
+        table{
+            border-collapse:collapse;
+            width:100%;
+        }
+        td, th {
+            border :1px solid black;
+            text-align:left;
+            padding:8px
+        }
+    </style>
+    <thead>
+
     <tr>
         <th>Name of the country </th>
         <th>Reason to Recommand	</th>
@@ -55,6 +68,7 @@
             <td> Dubai is famous for wealth, being expensive, and being a popular luxury travel destination	</td>
             <td> 30 days </td>
         </tr>
+        </thead>
 </table>
 
 
