added the code fensing

--- a/index.html
+++ b/index.html
@@ -32,14 +32,22 @@
 <table>
     <style>
         table{
+
             border-collapse:collapse;
+
             width:100%;
+
         }
+
         td, th {
+
             border :1px solid black;
+
             text-align:left;
+
             padding:8px
         }
+
     </style>
 
     <tr>
@@ -69,6 +77,21 @@
         </tr>
 </table>
 
+<hr>
+
+<h4> Code Fencing</h4>
+
+<q>  Can I set subject/content of email using mailto:?</q>
+
+<br>
+
+<a href ="https://stackoverflow.com/questions/4782068/can-i-set-subject-content-of-email-using-mailto"> Link to access the code</a>
+
+
+<pre>
+    <a href="mailto:no-one@snai1mai1.com?subject=free chocolate">example</a>
+
+</pre>
 
 </body>
 </html>
