added code fencing

--- a/index.html
+++ b/index.html
@@ -81,15 +81,15 @@
 
 <h4> Code display</h4>
 
-<q>  Can I set subject/content of email using mailto:?</q>
+<blockquote cites="https://stackoverflow.com/questions/4782068/can-i-set-subject-content-of-email-using-mailto"> Can I set subject/content of email using mailto:?</blockquotes>
 <br>
+
 
 <a href ="https://stackoverflow.com/questions/4782068/can-i-set-subject-content-of-email-using-mailto"> Link to access the code</a>
 
 
 <pre>
 
-    <?php
 $encodedTo = rawurlencode($message->to);
 $encodedSubject = rawurlencode($message->subject);
 $encodedBody = rawurlencode($message->body);
