Added bonus link to index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head> 
+        <a href="Bonus.html">Bonus page</a>
         <title> Name </title>
     </head>
     <body>
