--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 <h3>Ordered and Unordered list</h3>
 <h4> The Avengers</h4>
 <ol> <li>Nandhu Narayan</li>
+    <ol>
+        <li> Age:22 years</li>
+        <li> Gender : Female</li>
+    </ol>
 <li> Abitha</li> 
 <li> Prajeetha</li> </ol>
 <h4>Other teams that i think would be good to watch play</h4>
